perfil de test ativo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,1 @@
-
-### Habilitar acesso ao H2 Console
-
-
-### Defenir configuração do H2
-
-spring.datasource.url=jdbc:mysql://localhost:3306/livraria
-spring.datasource.username=root
-spring.datasource.password=nasa
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=test
