correcao no perfil de teste

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,9 @@
 
-### Habilitar acesso ao H2 Console
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-
-### Defenir configuração do H2
-
-spring.datasource.url=jdbc:mysql://localhost:3306/livraria_test
-spring.datasource.username=root
-spring.datasource.password=nasa
-
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
